# tapi

./: .gitignore  Cargo.toml  README.org  flake.nix
backend/src/controllers/: transaction.rs
backend/src/errors/: mod.rs
backend/src/models/: api_doc.rs  category.rs  mod.rs  transaction.rs
backend/src/repositories/: transaction_repository.rs
frontend/: README.org
migrations/: 20220727042917_create_transactions.sql
src/: lib.rs  main.rs
src/api/: transaction.rs
src/errors/: mod.rs
src/models/: category.rs  mod.rs  transaction.rs
src/repositories/: mod.rs  repository.rs  transaction_repository.rs
