[package]
name = "tapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.139", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
env_logger = "0.9.0"
log = "0.4.17"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.2"
dotenv = "0.15.0"
sqlx = { version = "0.6.0", features = ["postgres", "uuid", "runtime-actix-rustls", "chrono"] }
async-trait = "0.1.56"
chrono = { version = "0.4.19", features = ["serde"] }
utoipa = { version = "1.1.0", features = ["actix_extras", "uuid", "chrono_with_format"] }
utoipa-swagger-ui = { version = "1.1.0", features = ["actix-web"] }
